# claude-swap-gui

./: .gitignore  DESIGN.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config.rs  commands.rs  credentials.rs  lib.rs  lock.rs  main.rs  paths.rs  sequence.rs  settings.rs  swap_cli.rs  switcher.rs  token_stats.rs  tray.rs  types.rs  usage.rs
src/components/: AccountCard.tsx  ActionBar.tsx  EmptyState.tsx  Header.tsx  SettingsView.tsx  UsageBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  separator.tsx
src/hooks/: useAccounts.ts  useSettings.ts  useUpdate.ts
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: format.ts  ipc.ts
src/styles/: globals.css
